test_suite/tests/compile_fail/discriminator_no_args.rs
use ronky::Exported;

#[derive(Exported)]
#[arri(discriminator)]
enum WellWhatToUse {
    IDontKnow { doYou: Option<bool> },
}

fn main() {}
